[project]
name = "dotcp"
version = "0.1.1"
description = "Copy selected dotfiles to directory"
authors = [
    {name = "jieggii", email = "jieggii@pm.me"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.6.2"
readme = "README.md"
keywords = [
    "dotfiles",
]

[project.urls]
Homepage = "https://github.com/jieggii/dotcp"
"Bug Tracker" = "https://github.com/jieggii/dotcp/issues"

[project.scripts]
dotcp = "dotcp.__main__:main"

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.scripts]
fmt.shell = "pdm run isort ./dotcp/ && pdm run black ./dotcp/"
lint = "pylint ./dotcp/"

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "pylint>=2.13.9",
]

[tool.black]
line-length = 105
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 105

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
